--- a/MGRModLoader/MGRModLoader.vcxproj.filters
+++ b/MGRModLoader/MGRModLoader.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="FilesTools.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ini.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
